<resources>
    <string name="app_name">Mysteries</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="hello_world">Mysteries of the World</string>
    <string name="pirates">Calculator</string>
    <string name="ninjas">Weather</string>
    <string name="num2">Number 2 :</string>
    <string name="num1">Number 1 :</string>
    <string name="calculateButton">Calculate</string>
    <string name="sum">Sum</string>
    <string name="multiply">Multiply</string>
    <string name="subtract">Subtract</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
