<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@drawable/background">

    <!--<EditText android:id="@+id/edit_message"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/edit_message"-->
        <!--android:layout_below="@+id/radio"-->
        <!--android:lines="2" android:maxLines="4"/>-->

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/hello_world"
        android:id="@+id/edit_message"/>

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">
        <RadioButton android:id="@+id/radio_calculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pirates"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ninjas"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage"
        android:layout_below="@+id/radio"
        android:lines="2" android:maxLines="4"/>

</LinearLayout>


