<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sethishi.myfirstapp.Calculator">

    <EditText
        android:layout_height="wrap_content"
        android:id="@+id/num1"
        android:inputType="number"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:textSize="14sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:textColor="@android:color/holo_red_dark"
        android:hint="100" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/num2"
        android:inputType="number"
        android:layout_below="@id/num1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="14sp"
        android:textColor="@android:color/holo_red_dark"
        android:textAlignment="center"
        android:hint="12" />



    <Button
        android:text="@string/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="calculateValue"/>



    <RadioGroup android:id="@+id/rg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:checkedButton="@+id/radioButton">

        <RadioButton
            android:text="@string/sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton"
            android:layout_alignBaseline="@+id/button"
            android:layout_alignBottom="@+id/button"
            android:layout_centerHorizontal="true"
            android:layout_weight="1" />

        <RadioButton
        android:text="@string/multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton3"
        android:layout_below="@+id/radioButton2"
        android:layout_alignLeft="@+id/radioButton2"
        android:layout_alignStart="@+id/radioButton2" />

    <RadioButton
        android:text="@string/subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton2"
        android:layout_alignLeft="@+id/radioButton"
        android:layout_alignStart="@+id/radioButton"
        android:layout_below="@+id/radioButton" />

    </RadioGroup>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finalValue"
        android:layout_marginTop="73dp"
        android:textSize="40sp"
        android:layout_below="@+id/rg1"
        android:layout_centerVertical="false"
        android:backgroundTint="@android:color/darker_gray"
        android:autoText="true" />


</RelativeLayout>
